[gd_scene load_steps=12 format=3 uid="uid://prthhauodu7w"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_xukyc"]
[ext_resource type="Resource" uid="uid://bickpds32e7x3" path="res://gui/inventory/items/player_inventory.tres" id="2_spd0c"]
[ext_resource type="Texture2D" uid="uid://cciyv7ba0am3r" path="res://prefab/Nervous-Scientist.png" id="3_minkb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1dx7g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m0fv8"]
radius = 9.0
height = 34.0

[sub_resource type="Animation" id="Animation_ha14r"]
length = 2.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/CharacterSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/CharacterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 8, 9, 10, 6, 11, 0, 1, 2, 3, 4, 5, 6, 7, 8, 8, 9, 10, 6, 11]
}

[sub_resource type="Animation" id="Animation_vn0i0"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/CharacterSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/CharacterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_tg2kx"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/CharacterSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/CharacterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_ruyft"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/CharacterSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/CharacterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_gytwq"]
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/CharacterSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/CharacterSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8vn3v"]
_data = {
"Idle": SubResource("Animation_ha14r"),
"Running-Left": SubResource("Animation_vn0i0"),
"Running-Right": SubResource("Animation_tg2kx"),
"Running-backwards": SubResource("Animation_gytwq"),
"Running-forward": SubResource("Animation_ruyft")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_xukyc")
inventory = ExtResource("2_spd0c")

[node name="Character" type="Node2D" parent="."]

[node name="CharacterSprite" type="Sprite2D" parent="Character"]
texture_filter = 1
texture = ExtResource("3_minkb")
hframes = 6
vframes = 5
frame = 20
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/custom/Nervous-Scientist.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": false,
"slice_section": false
}
metadata/_aseprite_wizard_source_file_hash_ = "0621bc0de5354d340f5daa42f034bc59"

[node name="TileMovementDelayTimer" type="Timer" parent="Character"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_1dx7g")

[node name="hurtBox" type="Area2D" parent="."]
position = Vector2(1, 0)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_m0fv8")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8vn3v")
}

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurt_box_area_entered"]
